media query break footer to prevent overlap text

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -230,6 +230,10 @@ body {
    @media all and (min-width:800px) {
       background: transparent;
    }
+   
+   @media all and (max-width: 1100px) {
+      max-width: 700px;
+   }
 }
 
 .footer-logo {
